[package]
name = "patate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "recover_secret"
path = "src/recover_secret.rs"


[dependencies]
serde = { version = "1", features = ["serde_derive"]}
serde_json = "1"

